# simulator

./: .gitignore  CMakeLists.txt  Makefile  core.c  core.h  gl.c  gl.h  main.c  mmath.c  mmath.h  os.c  os.h  valgrind_suppressions.txt
assets/: atomf.glsl  atomv.glsl  bondv.glsl  dispersionf.glsl  dispersionv.glsl  heatf.glsl  heatv.glsl
lib/: glcorearb.h
